--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,47 @@
     box-sizing: border-box;
 }
 
+header {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+header div {
+    display: flex;
+    width: 360px;
+    font-size: 13px;
+    padding: 4px;
+}
+
+header div p {
+    display: inline-block;
+    max-width: 60%;
+    width: 70%;
+    padding: 5px;
+    line-height: 15px;
+    color: #474747;
+}
+
+header div p a {
+    text-decoration: none;
+    color: #2e76c7;
+}
+
+header > div > a {
+    display: inline-block;
+    max-width: 40%;
+    width: 30%;
+    height: 100%;
+    padding: 9px 6px 9px 6px;
+    font-size: 16px;
+    background: #2e76c7;
+    border: solid 1px #474747;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+}
+
 body {
     font-size: 16px;
     font-family: Arial, sans-serif;
@@ -14,7 +55,13 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh; 
+    height: 90vh; 
+}
+
+main a {
+    text-decoration: none;
+    color: #2e76c7;
+    font-size: 13px;
 }
 
 .container {
@@ -35,14 +82,23 @@ main {
     text-align: center;
     color: #474747;
     padding-bottom: 10px;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .container form h3 {
     text-align: center;
     color: #474747;
-    margin-bottom: 20px;
     font-weight: 300;
+    font-size: 15px;
+    padding-top: 5px;
+}
+
+.container form .learn-more-link {
+    text-align: center;
+    display: block;
+    width: 100%;
+    padding-bottom: 22px;
+    padding-top: 5px;
 }
 
 .container form input{
@@ -77,19 +133,36 @@ main {
 .container form .bottom-text {
     width: 100%;
     text-align: center;
-    color: #b5b5b5;
+    color: #858383;
     font-style: italic;
     padding: 0 40px 0 40px;
+    font-size: 12px;
+    line-height: 18px;
+    
 }
 
 .container .form-footer {
     background: #ECEEF1;
-    font-size: 14px;
-    color: #b5b5b5;
+    font-size: 10px;
+    color: #8f8d8d;;
     text-align: center;
     vertical-align: center;
     padding: 20px;
-    border-bottom: solid #b5b5b5 1px;
+    border-bottom: solid #cac6c6 1px;
     border-right: solid #b5b5b5 1px;
     border-left: solid #b5b5b5 1px;
+}
+
+footer {
+    text-align: center;
+    font-size: 13px;
+    height: 10vh;
+    margin: auto;
+    line-height: 20px;
+    color: #474747;
+} 
+
+footer a {
+    text-decoration: none;
+    color: #474747;
 }
